# openGLtriangle

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  gameproject1
src/: main.cpp
